# agent-pet

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  test-vite-logic.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  desktop-windows.yml
apps/desktop/: README.md  package.json  vite.desktop.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/autogenerated/: animation_registry.toml  preview_action.toml  preview_say.toml  preview_state.toml  quit.toml  report_bounds.toml  report_registry.toml  start_drag.toml
apps/desktop/src-tauri/src/: agent.rs  commands.rs  lib.rs  main.rs  pet.rs  portfile.rs  tray.rs  window.rs
apps/desktop/src-tauri/src/server/: auth.rs  handlers.rs  mod.rs  state.rs
examples/: auto-mount.html  multi-pet.html  observe.html  programmatic-mount.html
examples/self-hosted/: index.html
public/: _headers  _redirects  index.html  playground.html  version.json
public/v0.1/: SRI.json  agent-pet-widget.iife.js  agent-pet.js  index.d.ts  pet.css
scripts/: batch-preprocess.py  build-pages.mjs  build-rips-deploy.py  preprocess-rip.py  retry-failed.sh  screenshot.mjs  sri.mjs  vendor-pet.mjs
src/: css.d.ts  index.ts
src/core/: atlas.ts  compose-catalogs.ts  image.ts  index.ts  manifest.ts  pets.ts  types.test.ts  types.ts
src/react/: PetOverlay.tsx  PetRail.tsx  PetSettings.tsx  PetSpriteFace.tsx  context.tsx  icon-set.tsx  (+3 more)
(+85 files in other folders)
