[package]
name = "agent-pet-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_pet_desktop"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
axum = "0.7"
constant_time_eq = "0.3"
dirs = "5"
http = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.5", features = ["limit"] }
url = "2"

[target.'cfg(windows)'.dependencies]
whoami = "1"

[dev-dependencies]
tempfile = "3"
